2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Renamed confusing NetworkChatModel to
	  ProtocolChatModel and ChatType.Network to ChatType.Protocol.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: When connecting to a new server call
	  SyncChat() after AddChat(), else already connected frontends will not
	  get any messages.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: CommandMessageQuery() sends message
	  now once.
	
	  CommandPart() sends part message now correctly when no channel name was
	  given.
	
	  CommandMe() uses now nickname coloring.
	
	  _OnJoin() uses now nickname coloring.
	
	  _OnPart() uses now nickname coloring.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Trim trailing spaces in commands that
	  use space as separator (like op/deop).

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Reply error message when channel is
	  moderated.

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* Engine-IRC.mdp: Updated using MonoDevelop 0.18.1
	* Protocols/Irc/IrcProtocolManager.cs: Added some "not enough parameters" to
	  commands.
