@@ -1,5 +1,12 @@
 2008-06-02  Mirco Bauer <meebey@meebey.net> 
 
+	* Protocols/Irc/IrcProtocolManager.cs: _Run(): Fixed reconnect handling.
+	
+	  OnDisconnected(): Don't disable the protocol chat, else the user loses
+	  the control over the protocol manager.
+
+2008-06-02  Mirco Bauer <meebey@meebey.net> 
+
 	* Protocols/Irc/IrcProtocolManager.cs: Renamed confusing NetworkChatModel to
 	  ProtocolChatModel and ChatType.Network to ChatType.Protocol.
 
